.provarCaches/00D410000011HE0EAM/objects/rstk__locadd__c.object
<CustomObject>
    <fields>
        <fullName>rstk__locmove_toicitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locmove_toicitem</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (locmove_toicitem)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_toloccomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Loc Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_tolocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (To Loc ID)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_tolocnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_tolocsec__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tracking No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_toloctype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>toloctype</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_topjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Project Charge Code</description>
        <inlineHelpText>To Project Charge Code</inlineHelpText>
        <label>Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (To Project Charge Code)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_toproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (To Project)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_tosite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To site</inlineHelpText>
        <label>To Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (To Site)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_trackind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>trackind</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_txncomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_txndate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ZZ-Stock Loc Add</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ-Stock Loc Add</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>